Fix input box alignment

--- a/application/client/src/css/post.css
+++ b/application/client/src/css/post.css
@@ -23,7 +23,6 @@ input{
     padding: 2%;
     width: 50%;
     flex: 0 0 200px;
-    margin-left: 160px;
     height: 50px;
 }
 textarea{
@@ -79,4 +78,12 @@ textarea{
 
 .container2{
     text-align: center;
+}
+
+.post-title{
+    margin-left: 160px;
+}
+
+.post-price{
+    margin-left: 160px;
 }
